# pomo-cli

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  tox.ini
.github/workflows/: test.yml
pomo/: constants.py  logging.py  main.py  state.py
pomo/commands/: config.py  pause.py  status.py  stop.py
